force-app/main/default/objects/Purchase_Behaviour_Insights__c/Purchase_Behaviour_Insights__c.object-meta.xml
<CustomObject>
    <label>Purchase Behaviour Insights</label>
    <nameField>
        <displayFormat>PBI-{0000}</displayFormat>
        <label>Purchase Behaviour Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Behaviour Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>