force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Average_Metal_Weight_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Average_Metal_Weight_Purchased__c</fullName>
    <label>Average Metal Weight Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>