force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Average_Purchase_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Purchase_Interval_Days__c</fullName>
    <label>Average Purchase Interval (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>