force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Average_Purity_Preference__c.field-meta.xml
<CustomField>
    <fullName>Average_Purity_Preference__c</fullName>
    <label>Average Purity Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>