force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Average_Ticket_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket_Size__c</fullName>
    <label>Average Ticket Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>