force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Coupon_Usage_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Usage_Frequency__c</fullName>
    <label>Coupon Usage Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>