force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Behaviour Insights</relationshipLabel>
    <relationshipName>Purchase_Behaviour_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>