force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Design_Style_Preference__c.field-meta.xml
<CustomField>
    <fullName>Design_Style_Preference__c</fullName>
    <label>Design Style Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>