force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/High_Value_Purchase_Flag__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Purchase_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High-Value Purchase Flag</label>
    <type>Checkbox</type>
</CustomField>