force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Jewellery_Type_Preference__c.field-meta.xml
<CustomField>
    <fullName>Jewellery_Type_Preference__c</fullName>
    <label>Jewellery Type Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>