force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Lifetime_Purchase_Value_LTV__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Purchase_Value_LTV__c</fullName>
    <label>Lifetime Purchase Value (LTV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>