force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Next_Expected_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Expected_Purchase_Date__c</fullName>
    <label>Next Expected Purchase Date</label>
    <type>Date</type>
</CustomField>