force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Payment_Mode_Preference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode_Preference__c</fullName>
    <label>Payment Mode Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>