force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Preferred_Metal_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Metal_Type__c</fullName>
    <label>Preferred Metal Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>