force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Preferred_Price_Band__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Price_Band__c</fullName>
    <label>Preferred Price Band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>