force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Preferred_Purchase_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Purchase_Time__c</fullName>
    <label>Preferred Purchase Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>