force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Preferred_Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Sales_Executive__c</fullName>
    <label>Preferred Sales Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>