force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Preferred_Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Store_Location__c</fullName>
    <label>Preferred Store / Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>