force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Product_Category_Preference__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Preference__c</fullName>
    <label>Product Category Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>