force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Product_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Return_Reason__c</fullName>
    <label>Product Return Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>