force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Purchase_Channel__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Channel__c</fullName>
    <label>Purchase Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>