force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Purchase_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Frequency__c</fullName>
    <label>Purchase Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>