force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Purchase_Occasion__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Occasion__c</fullName>
    <label>Purchase Occasion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>