force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Redemption_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Behaviour__c</fullName>
    <label>Redemption Behaviour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>