force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Repeat_Category_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Category_Purchases__c</fullName>
    <label>Repeat Category Purchases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>