force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Return_Exchange_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Return_Exchange_Frequency__c</fullName>
    <label>Return / Exchange Frequency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>