force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Scheme_Participation__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Participation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheme Participation</label>
    <type>Checkbox</type>
</CustomField>