force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Seasonal_Buying_Trend__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Buying_Trend__c</fullName>
    <label>Seasonal Buying Trend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>