force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Stone_Preference__c.field-meta.xml
<CustomField>
    <fullName>Stone_Preference__c</fullName>
    <label>Stone Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>