force-app/main/default/objects/Purchase_Behaviour_Insights__c/fields/Upgrade_Exchange_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Exchange_Pattern__c</fullName>
    <label>Upgrade / Exchange Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>